--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
   <html lang="en">
   <head>
     <title>Catwalk</title>
+    <meta charset="utf-8">
+    <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
   </head>
   <body>
     <div id="app"></div>
