--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <title>Catwalk</title>
     <meta charset="utf-8">
     <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
